--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rogerrivl.github.io/AF-WHtR",
+  "homepage": "https://airforcewhtrcalculator.netlify.app/",
   "name": "af-whtr",
   "version": "0.1.0",
   "private": true,
